--- a/index.html
+++ b/index.html
@@ -327,12 +327,44 @@
                 Developed and managed the web frontend.
               </li>
               
-                <b>Languages: HTML,CSS,jQuery</b> 
+               <b>Languages</b>: HTML,CSS,jQuery
               </li>
             </ul>
           </div>
           <div class="card-action">
             <span>July 2021 - Jan 2022 </span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <!-- <div class="col s12 m2">
+                <a href="https://www.zhiffy.com/" target="_blank"><img alt="Zhiffy logo"
+                    src="assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
+              </div> -->
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title teal-text hoverline">
+                    <!-- <a href="https://www.zhiffy.com/" target="_blank"
+                      class="teal-text hoverline">Zhiffy</a> -->
+                      Logically e
+                  </span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Backend Developer</div>
+            <ul>
+              <li>
+                Developing backend of a project using CodeIgniter. .
+              </li>
+              
+               <b>Languages</b>:CodeIgniter,HTML,CSS,jQuery,Bootstrap
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>March 2022 - Present </span>
           </div>
         </div>
       </div>
@@ -742,10 +774,10 @@
               aria-label="Call Devanshi">+91-7016808679</a></a>
         </p>
         <p>
-          <a aria-label="Email Devanshi" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email Devanshi" href="mailto:devanshiharsora99@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Devanshi" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Devanshi" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">densyaharsora@gmail.com</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Devanshi" href="mailto:devanshiharsora99@gmail.com"
+              class="hoverline">devanshiharsora99@gmail.com</a></a>
         </p>
         <p>
           <a aria-label="View Devanshi on GitHub" href="https://github.com/Devanshi2241" target="_blank"
