--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
               <h1 style="font-size:70px; font-weight:bold;"> <b>Devanshi Harsora</b></h1>
               <!-- <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5> -->
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Love to learn new things and want to take more and more experience by contributing my programming skills and 
-                knowledge.</h5>
+              <h5> I enjoy learning new things and hope to gain more experience by offering my programming knowledge and talents. </h5>
             </div>
             <div class="social">
               <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
@@ -260,9 +259,7 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am student of Computer Science and Engineering with specialization in Cyber Security in Rashtriya 
-          Raksha University.I am aspiring to become a full stack developer.I have worked on technologies like PHP,Node JS,Python, MySQL, MongoDB, HTML, CSS during my bachelor's. I have worked as a frontend developer in 6 months internship.
-          I am very dedicated to my work .
+          I am a student at Rashtriya Raksha University studying Computer Science and Engineering with specialization in Cyber Security. During my bachelor's degree, I dealt with technologies such as PHP, Node JS, Python, MySQL, MongoDB, HTML, and CSS. During a 6-month internship, I worked as a frontend developer.
         </p>
         <p>
           <ul>
