--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
               <li>
                 Developing backend of a project using CodeIgniter. .
               </li>
-              
+              <div style="display:flex;">
                <b>Languages</b>:CodeIgniter,HTML,CSS,jQuery,Bootstrap
-              </li>
+              </div></li>
             </ul>
           </div>
           <div class="card-action">
