--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
               <li>
                 Developing backend of a project using CodeIgniter. .
               </li>
-              <div style="display:flex;">
-               <b>Languages</b>:CodeIgniter,HTML,CSS,jQuery,Bootstrap
+              
+               <b>Languages</b>:<div style="display:flex;">CodeIgniter,HTML,CSS,jQuery,Bootstrap
               </div></li>
             </ul>
           </div>
