--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
   <!-- Open Graph-->
   <!-- <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Devanshi Bhogayata | Software Developer" />
+  <meta property="og:title" content="Devanshi Harsora | Software Developer" />
   <meta property="og:description" content="Software Developer" />
-  <meta property="og:url" content="https://Devanshibhogayata.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
-  <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
+  <meta property="og:url" content="https://Devanshi2241.github.io/" />
+  <meta property="og:site_name" content="Devanshi Harsora | Software Developer" />
+  <meta property="article:publisher" content="https://Devanshi2241.github.io/" />
   <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" /> -->
   <!-- Twitter -->
   <!-- <meta name="twitter:card" content="summary" />
