--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
                 Developing backend of a project using CodeIgniter. .
               </li>
               
-               <b>Languages</b>:<div style="display:flex;">CodeIgniter,HTML,CSS,jQuery,Bootstrap
-              </div></li>
+               <b>Languages</b>:CodeIgniter,HTML,CSS,jQuery,Bootstrap
+              </li>
             </ul>
           </div>
           <div class="card-action">
@@ -765,11 +765,7 @@
     <section id="contact" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
-        <p>
-          <a aria-label="Call Devanshi" data-position="top" data-tooltip="Call Devanshi"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Devanshi">+91-7016808679</a></a>
-        </p>
+      
         <p>
           <a aria-label="Email Devanshi" href="mailto:devanshiharsora99@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Devanshi" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
