--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
               <li>
                 Developed and managed the web frontend.
               </li>
-              
+              <li>
                <b>Languages</b>: HTML,CSS,jQuery
               </li>
             </ul>
@@ -353,10 +353,10 @@
             <div class="role brown-text text-darken-2">Backend Developer</div>
             <ul>
               <li>
-                Developing backend of a project using CodeIgniter. .
+                Developing backend of a project using CodeIgniter which helps Travel agency to book and manage all tours. 
               </li>
-              
-               <b>Languages</b>:CodeIgniter,HTML,CSS,jQuery,Bootstrap
+              <li>
+               <b>Languages</b>:CodeIgniter, HTML, CSS, jQuery, Bootstrap
               </li>
             </ul>
           </div>
