--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
   <meta name="author" content="Varad Bhogayata" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." /> -->
-  <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png" />
+<!--   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png" />
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon/apple-icon-76x76.png" />
@@ -60,7 +60,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicon/apple-icon-144x144.png" />
   <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon/apple-icon-152x152.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png" />
-  <!-- <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icon.png" />
+  <!-- <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icon.png" /> -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon.png" />
   <link rel="icon" type="image/png" sizes="96x96" href="assets/img/icon.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon.png" /> -->
