--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
   <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicon/apple-icon-144x144.png" />
   <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon/apple-icon-152x152.png" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png" /> -->
-  <!-- <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png" />
+   <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icon.png" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png" />
-  <!-- <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icon.png" /> -->
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icon.png" /> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon.png" />
   <link rel="icon" type="image/png" sizes="96x96" href="assets/img/icon.png" />
