--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
   <meta name="author" content="Varad Bhogayata" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." /> -->
   <!-- <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png" />
-   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png" />
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon/apple-icon-76x76.png" />
@@ -60,13 +59,8 @@
   <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon/apple-icon-120x120.png" />
   <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicon/apple-icon-144x144.png" />
   <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon/apple-icon-152x152.png" />
-
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png" />
-   <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icon.png" />
-
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icon.png" /> 
-
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png" /> -->
+  <!-- <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon.png" />
   <link rel="icon" type="image/png" sizes="96x96" href="assets/img/icon.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon.png" /> -->
@@ -789,7 +783,7 @@
                 <p>
                   <b>Degree: </b>Bachelor of Computer Science and Engineering with speacialization in Cyber Security      
                   <br>
-                  <b>CGPA: </b>8.58/10.0
+                  <b>CGPA: </b>8.65/10.0
                 </p>
 
               </div>
