--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Backend Developer Intern</div>
+            <div class="role brown-text text-darken-2">Backend Developer</div>
             <ul>
               <li>
                 Worked as backend developer on a project named TravelHub which helps Travel agency to book and manage all tours. 
@@ -384,10 +384,10 @@
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Frontend Developer Intern</div>
+            <div class="role brown-text text-darken-2">Frontend Developer</div>
             <ul>
               <li>
-                Developed and managed the web frontend.
+                Developed and managed the different projects frontend.
               </li>
               <li>
                <b>Languages</b>: HTML,CSS,jQuery
