--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
                 <p>
                   <b>Degree: </b>Bachelor of Computer Science and Engineering with speacialization in Cyber Security      
                   <br>
-                  <b>CGPA: </b>8.65/10.0
+                  <b>CGPA: </b>8.53
                 </p>
 
               </div>
